--- a/React/app-react-0/package.json
+++ b/React/app-react-0/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,13 +13,21 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "@types/react-dom": "18.2.22",
     "@types/react": "18.2.66",
-    "autoprefixer": "10.4.19",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.2.2",
-    "postcss": "8.4.38",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "8.0.1",
+    "eslint-config-standard-with-typescript": "43.0.1",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.34.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "*",
     "vite": "5.2.0"
   }
 }
