--- a/React/app-react-0/package.json
+++ b/React/app-react-0/package.json
@@ -18,15 +18,15 @@
     "@typescript-eslint/eslint-plugin": "6.4.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "10.4.19",
     "eslint": "8.0.1",
     "eslint-config-standard-with-typescript": "43.0.1",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-n": "15.0.0 || ^16.0.0 ",
+    "eslint-plugin-n": "15.0.0 || 16.0.0 ",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.34.1",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
     "typescript": "*",
     "vite": "5.2.0"
   }
