--- a/JavaScript/scraping/package.json
+++ b/JavaScript/scraping/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jsdom": "^22.1.0",
+    "puppeteer": "^21.0.2"
+  }
 }
