--- a/React/app-react-tremor/package.json
+++ b/React/app-react-tremor/package.json
@@ -10,32 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@remixicon/react": "^4.2.0",
-    "@tremor/react": "^3.14.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@headlessui/react": "1.7.18",
+    "@headlessui/tailwindcss": "0.2.0",
+    "@remixicon/react": "4.2.0",
+    "@tremor/react": "3.14.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.37",
-    "tailwindcss": "^3.4.1",
+    "@tailwindcss/forms": "0.5.7",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "10.4.18",
+    "eslint": "8.0.1",
+    "eslint-config-standard-with-typescript": "43.0.1",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0 || 16.0.0 ",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.6",
+    "postcss": "8.4.37",
+    "tailwindcss": "3.4.1",
     "typescript": "*",
-    "vite": "^5.2.0"
+    "vite": "5.2.0"
   }
 }
