--- a/Node/sequalize/package.json
+++ b/Node/sequalize/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mysql2": "3.10.3",
     "sequelize": "6.37.3",
     "typescript": "5.5.3"
