--- a/Node/sequalize/package.json
+++ b/Node/sequalize/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "cron": "3.1.7",
+    "dotenv": "16.4.5",
+    "mariadb": "3.3.1",
     "mysql2": "3.10.3",
     "sequelize": "6.37.3",
     "typescript": "5.5.3"
@@ -18,6 +20,6 @@
     "@types/node": "20.14.11",
     "@types/sequelize": "4.28.20",
     "nodemon": "3.1.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "10.9.2"
   }
 }
