--- a/Node/sequalize/package.json
+++ b/Node/sequalize/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "cron": "3.1.7",
     "dotenv": "16.4.5",
+    "express": "^4.19.2",
     "mariadb": "3.3.1",
     "mysql2": "3.10.3",
     "sequelize": "6.37.3",
     "typescript": "5.5.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "20.14.11",
     "@types/sequelize": "4.28.20",
     "nodemon": "3.1.4",
