--- a/Node/sequalize/package.json
+++ b/Node/sequalize/package.json
@@ -18,6 +18,7 @@
     "typescript": "5.5.3"
   },
   "devDependencies": {
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.21",
     "@types/node": "20.14.11",
     "@types/sequelize": "4.28.20",
